Update and rename 纯JS实现QQ列表展开效果1125--ok.html to JS1125.html

--- a/JS1125.html
+++ b/JS1125.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>纯js实现展开效果</title>
+    <title>纯js实现展开效果1125--ok.</title>
     <link rel="stylesheet" href="qq.css">
     <script src="qq.js" type="text/javascript"></script>
 </head>
