Update and rename 纯JS+JQ（offset）实现QQ列表展开效果1217-ok.html to 1217.html

--- a/1217.html
+++ b/1217.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>js+jq用位置实现列表展开效果+左侧1217</title>
+    <title>js+jq用位置实现列表展开效果+左侧1217,纯JS+JQ（offset）实现QQ列表展开效果</title>
     <link rel="stylesheet" href="qq1217.css">
     <script src="jquery-3.js"></script>
     <script src="qq1217.js" type="text/javascript"></script>
