Update and rename 纯JQ实现QQ列表展开效果1222--基本ok.html to 1222.html

--- a/1222.html
+++ b/1222.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>js用位置实现列表展开效果1222</title>
+    <title>js用位置实现列表展开效果1222纯jq</title>
     <link rel="stylesheet" href="qq1222.css">
     <script src="jquery-3.js"></script>
     <script src="qq1222.js" type="text/javascript"></script>
