--- a/1226.html
+++ b/1226.html
@@ -44,8 +44,8 @@
        <li>
            <h4 class="h4cls"><img src="./img/ico1.gif" class="h4bj">他们是不是。。。</h4>
            <ul class="ul2cls">
-               <li><img src="logo5.png" class="./img/imgcls">梅花</li>
-               <li><img src="logo6.png" class="./img/imgcls">铁兰</li>
+               <li><img src="./img/logo5.png" class="imgcls">梅花</li>
+               <li><img src="./img/logo6.png" class="imgcls">铁兰</li>
                <li class="lastli"><img src="./img/logo.png" class="imgcls">腊梅</li>
            </ul>
        </li>
