--- a/1226.html
+++ b/1226.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <title>纯jq用位置实现列表展开效果1226ok</title>
     <link rel="stylesheet" href="./css/qq1226.css">
-    <script src="./js/jquery-3.js"></script>
+    <script src="jquery-3.js"></script>
     <script src="./js/qq1226.js" type="text/javascript"></script>
 </head>
 <body>
